[package]
name = "zerobuf"
version = "0.0.2"
authors = ["Badel2 <2badel2@gmail.com>"]
license = "MIT OR Apache-2.0"
description = """
A growable chunk of zeroed memory.
"""
repository = "https://github.com/badel2/zerobuf"
documentation = "https://docs.rs/zerobuf"
keywords = ["raw-vec", "zero", "buffer", "vector"]
readme = "README.md"

[dependencies]
